--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 cryptography==37.0.4
 defusedxml==0.7.1
+dj-database-url==0.5.0
 Django==4.0.6
 django-templated-mail==1.1.1
 djangorestframework==3.13.1
@@ -17,8 +18,10 @@ itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 oauthlib==3.2.0
+psycopg2-binary==2.9.3
 pycparser==2.21
 PyJWT==2.4.0
+python-decouple==3.6
 python3-openid==3.2.0
 pytz==2022.1
 requests==2.28.1
