--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ cryptography==37.0.4
 defusedxml==0.7.1
 dj-database-url==0.5.0
 Django==4.0.6
+django-cors-headers==3.13.0
 django-templated-mail==1.1.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==4.8.0
