--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ cffi==1.15.1
 charset-normalizer==2.1.0
 coreapi==2.3.3
 coreschema==0.0.4
+coverage==6.4.1
+coverage-badge==1.1.0
 cryptography==37.0.4
 defusedxml==0.7.1
 dj-database-url==0.5.0
