--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -11,6 +11,11 @@ jobs:
 
     runs-on: ubuntu-latest
     environment: django-workflow
+    services:
+      postgres:
+        image: postgres:12.5
+        ports: 
+          - 5432:5432
     strategy:
       max-parallel: 4
       matrix:
