--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -14,6 +14,10 @@ jobs:
     services:
       postgres:
         image: postgres:12.5
+        env:
+          POSTGRES_NAME: postgres
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
         ports: 
           - 5432:5432
     strategy:
